--- a/thumbing/push-data/data-center/src/main/resources/application.yml
+++ b/thumbing/push-data/data-center/src/main/resources/application.yml
@@ -12,10 +12,10 @@ spring:
       ddl-auto: update
     show-sql: true
     open-in-view: true
-    properties:
-      hibernate:
-        session_factory:
-          statement_inspector: com.thumbing.shared.jpa.GlobalStatementInspector
+#    properties:
+#      hibernate:
+#        session_factory:
+#          statement_inspector: com.thumbing.shared.jpa.GlobalStatementInspector
   redis:
     host: localhost
     port: 6379
@@ -91,7 +91,7 @@ spring:
   rabbitmq:
     username: guest
     password: guest
-    addresses: localhost:5672
+    addresses: 192.168.89.1:5672
     virtual-host: /
     listener:
       simple:
@@ -176,7 +176,7 @@ feign:
         readTimeout: 100000     #连接成功，处理数据的时间限制10秒 100000   读取时间过短会抛异常java.net.SocketTimeoutException: Read timed out
         loggerLevel: full      #日志输出等级
   hystrix:
-    enabled: true
+    enabled: false
 
 hystrix:
   command:
