--- a/thumbing/push-data/node-server/src/main/resources/application.yml
+++ b/thumbing/push-data/node-server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     serialization:
       FAIL_ON_EMPTY_BEANS: false
   rabbitmq:
-    addresses: localhost:5672
+    addresses: 192.168.89.1:5672
     username: guest
     password: guest
     virtual-host: /
