--- a/thumbing/push-data/data-center/src/main/resources/application.yml
+++ b/thumbing/push-data/data-center/src/main/resources/application.yml
@@ -104,8 +104,8 @@ spring:
       port: 27017
       database: thumbing
 elasticsearch:
-  host: 127.0.0.1,127.0.0.1,127.0.0.1
-  port: 9201,9202,9203
+  host: 127.0.0.1, 127.0.0.1, 127.0.0.1
+  port: 9201, 9202, 9203
   clusterName: thumbing
   schema: http
   index:
