--- a/thumbing/user-management/src/main/resources/application.yml
+++ b/thumbing/user-management/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 7074
+  port: 7079
 spring:
   application:
-    name: auth-server
+    name: user-management
   redis:
     host: localhost
     port: 6379
