--- a/client/thumbing/pubspec.yaml
+++ b/client/thumbing/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   #bloc
   flutter_bloc: ^5.0.0
-  #http
-  http: ^0.12.0
+  #dio
+  dio: ^3.0.9
   #equatable
   equatable: ^1.0.0
   #Reactive Extensions响应式编程包
